Add new request: CreateFUOTADeploymentForGroup
