# js/as/external/api/fuotaDeployment_pb.js
@@ -15,6 +15,8 @@ var google_protobuf_duration_pb = require('google-protobuf/google/protobuf/durat
 var as_external_api_multicastGroup_pb = require('../../../as/external/api/multicastGroup_pb.js');
 goog.exportSymbol('proto.api.CreateFUOTADeploymentForDeviceRequest', null, global);
 goog.exportSymbol('proto.api.CreateFUOTADeploymentForDeviceResponse', null, global);
+goog.exportSymbol('proto.api.CreateFUOTADeploymentForGroupRequest', null, global);
+goog.exportSymbol('proto.api.CreateFUOTADeploymentForGroupResponse', null, global);
 goog.exportSymbol('proto.api.FUOTADeployment', null, global);
 goog.exportSymbol('proto.api.FUOTADeploymentDeviceListItem', null, global);
 goog.exportSymbol('proto.api.FUOTADeploymentDeviceState', null, global);
@@ -1271,6 +1273,368 @@ proto.api.CreateFUOTADeploymentForDeviceResponse.prototype.getId = function() {
 
 /** @param {string} value  */
 proto.api.CreateFUOTADeploymentForDeviceResponse.prototype.setId = function(value) {
+  jspb.Message.setField(this, 1, value);
+};
+
+
+
+/**
+ * Generated by JsPbCodeGenerator.
+ * @param {Array=} opt_data Optional initial data array, typically from a
+ * server response, or constructed directly in Javascript. The array is used
+ * in place and becomes part of the constructed object. It is not cloned.
+ * If no data is provided, the constructed object will be empty, but still
+ * valid.
+ * @extends {jspb.Message}
+ * @constructor
+ */
+proto.api.CreateFUOTADeploymentForGroupRequest = function(opt_data) {
+  jspb.Message.initialize(this, opt_data, 0, -1, null, null);
+};
+goog.inherits(proto.api.CreateFUOTADeploymentForGroupRequest, jspb.Message);
+if (goog.DEBUG && !COMPILED) {
+  proto.api.CreateFUOTADeploymentForGroupRequest.displayName = 'proto.api.CreateFUOTADeploymentForGroupRequest';
+}
+
+
+if (jspb.Message.GENERATE_TO_OBJECT) {
+/**
+ * Creates an object representation of this proto suitable for use in Soy templates.
+ * Field names that are reserved in JavaScript and will be renamed to pb_name.
+ * To access a reserved field use, foo.pb_<name>, eg, foo.pb_default.
+ * For the list of reserved names please see:
+ *     com.google.apps.jspb.JsClassTemplate.JS_RESERVED_WORDS.
+ * @param {boolean=} opt_includeInstance Whether to include the JSPB instance
+ *     for transitional soy proto support: http://goto/soy-param-migration
+ * @return {!Object}
+ */
+proto.api.CreateFUOTADeploymentForGroupRequest.prototype.toObject = function(opt_includeInstance) {
+  return proto.api.CreateFUOTADeploymentForGroupRequest.toObject(opt_includeInstance, this);
+};
+
+
+/**
+ * Static version of the {@see toObject} method.
+ * @param {boolean|undefined} includeInstance Whether to include the JSPB
+ *     instance for transitional soy proto support:
+ *     http://goto/soy-param-migration
+ * @param {!proto.api.CreateFUOTADeploymentForGroupRequest} msg The msg instance to transform.
+ * @return {!Object}
+ */
+proto.api.CreateFUOTADeploymentForGroupRequest.toObject = function(includeInstance, msg) {
+  var f, obj = {
+    mcGroupId: msg.getMcGroupId(),
+    fuotaDeployment: (f = msg.getFuotaDeployment()) && proto.api.FUOTADeployment.toObject(includeInstance, f)
+  };
+
+  if (includeInstance) {
+    obj.$jspbMessageInstance = msg;
+  }
+  return obj;
+};
+}
+
+
+/**
+ * Deserializes binary data (in protobuf wire format).
+ * @param {jspb.ByteSource} bytes The bytes to deserialize.
+ * @return {!proto.api.CreateFUOTADeploymentForGroupRequest}
+ */
+proto.api.CreateFUOTADeploymentForGroupRequest.deserializeBinary = function(bytes) {
+  var reader = new jspb.BinaryReader(bytes);
+  var msg = new proto.api.CreateFUOTADeploymentForGroupRequest;
+  return proto.api.CreateFUOTADeploymentForGroupRequest.deserializeBinaryFromReader(msg, reader);
+};
+
+
+/**
+ * Deserializes binary data (in protobuf wire format) from the
+ * given reader into the given message object.
+ * @param {!proto.api.CreateFUOTADeploymentForGroupRequest} msg The message object to deserialize into.
+ * @param {!jspb.BinaryReader} reader The BinaryReader to use.
+ * @return {!proto.api.CreateFUOTADeploymentForGroupRequest}
+ */
+proto.api.CreateFUOTADeploymentForGroupRequest.deserializeBinaryFromReader = function(msg, reader) {
+  while (reader.nextField()) {
+    if (reader.isEndGroup()) {
+      break;
+    }
+    var field = reader.getFieldNumber();
+    switch (field) {
+    case 1:
+      var value = /** @type {string} */ (reader.readString());
+      msg.setMcGroupId(value);
+      break;
+    case 2:
+      var value = new proto.api.FUOTADeployment;
+      reader.readMessage(value,proto.api.FUOTADeployment.deserializeBinaryFromReader);
+      msg.setFuotaDeployment(value);
+      break;
+    default:
+      reader.skipField();
+      break;
+    }
+  }
+  return msg;
+};
+
+
+/**
+ * Class method variant: serializes the given message to binary data
+ * (in protobuf wire format), writing to the given BinaryWriter.
+ * @param {!proto.api.CreateFUOTADeploymentForGroupRequest} message
+ * @param {!jspb.BinaryWriter} writer
+ */
+proto.api.CreateFUOTADeploymentForGroupRequest.serializeBinaryToWriter = function(message, writer) {
+  message.serializeBinaryToWriter(writer);
+};
+
+
+/**
+ * Serializes the message to binary data (in protobuf wire format).
+ * @return {!Uint8Array}
+ */
+proto.api.CreateFUOTADeploymentForGroupRequest.prototype.serializeBinary = function() {
+  var writer = new jspb.BinaryWriter();
+  this.serializeBinaryToWriter(writer);
+  return writer.getResultBuffer();
+};
+
+
+/**
+ * Serializes the message to binary data (in protobuf wire format),
+ * writing to the given BinaryWriter.
+ * @param {!jspb.BinaryWriter} writer
+ */
+proto.api.CreateFUOTADeploymentForGroupRequest.prototype.serializeBinaryToWriter = function (writer) {
+  var f = undefined;
+  f = this.getMcGroupId();
+  if (f.length > 0) {
+    writer.writeString(
+      1,
+      f
+    );
+  }
+  f = this.getFuotaDeployment();
+  if (f != null) {
+    writer.writeMessage(
+      2,
+      f,
+      proto.api.FUOTADeployment.serializeBinaryToWriter
+    );
+  }
+};
+
+
+/**
+ * Creates a deep clone of this proto. No data is shared with the original.
+ * @return {!proto.api.CreateFUOTADeploymentForGroupRequest} The clone.
+ */
+proto.api.CreateFUOTADeploymentForGroupRequest.prototype.cloneMessage = function() {
+  return /** @type {!proto.api.CreateFUOTADeploymentForGroupRequest} */ (jspb.Message.cloneMessage(this));
+};
+
+
+/**
+ * optional string mc_group_id = 1;
+ * @return {string}
+ */
+proto.api.CreateFUOTADeploymentForGroupRequest.prototype.getMcGroupId = function() {
+  return /** @type {string} */ (jspb.Message.getFieldProto3(this, 1, ""));
+};
+
+
+/** @param {string} value  */
+proto.api.CreateFUOTADeploymentForGroupRequest.prototype.setMcGroupId = function(value) {
+  jspb.Message.setField(this, 1, value);
+};
+
+
+/**
+ * optional FUOTADeployment fuota_deployment = 2;
+ * @return {proto.api.FUOTADeployment}
+ */
+proto.api.CreateFUOTADeploymentForGroupRequest.prototype.getFuotaDeployment = function() {
+  return /** @type{proto.api.FUOTADeployment} */ (
+    jspb.Message.getWrapperField(this, proto.api.FUOTADeployment, 2));
+};
+
+
+/** @param {proto.api.FUOTADeployment|undefined} value  */
+proto.api.CreateFUOTADeploymentForGroupRequest.prototype.setFuotaDeployment = function(value) {
+  jspb.Message.setWrapperField(this, 2, value);
+};
+
+
+proto.api.CreateFUOTADeploymentForGroupRequest.prototype.clearFuotaDeployment = function() {
+  this.setFuotaDeployment(undefined);
+};
+
+
+/**
+ * Returns whether this field is set.
+ * @return{!boolean}
+ */
+proto.api.CreateFUOTADeploymentForGroupRequest.prototype.hasFuotaDeployment = function() {
+  return jspb.Message.getField(this, 2) != null;
+};
+
+
+
+/**
+ * Generated by JsPbCodeGenerator.
+ * @param {Array=} opt_data Optional initial data array, typically from a
+ * server response, or constructed directly in Javascript. The array is used
+ * in place and becomes part of the constructed object. It is not cloned.
+ * If no data is provided, the constructed object will be empty, but still
+ * valid.
+ * @extends {jspb.Message}
+ * @constructor
+ */
+proto.api.CreateFUOTADeploymentForGroupResponse = function(opt_data) {
+  jspb.Message.initialize(this, opt_data, 0, -1, null, null);
+};
+goog.inherits(proto.api.CreateFUOTADeploymentForGroupResponse, jspb.Message);
+if (goog.DEBUG && !COMPILED) {
+  proto.api.CreateFUOTADeploymentForGroupResponse.displayName = 'proto.api.CreateFUOTADeploymentForGroupResponse';
+}
+
+
+if (jspb.Message.GENERATE_TO_OBJECT) {
+/**
+ * Creates an object representation of this proto suitable for use in Soy templates.
+ * Field names that are reserved in JavaScript and will be renamed to pb_name.
+ * To access a reserved field use, foo.pb_<name>, eg, foo.pb_default.
+ * For the list of reserved names please see:
+ *     com.google.apps.jspb.JsClassTemplate.JS_RESERVED_WORDS.
+ * @param {boolean=} opt_includeInstance Whether to include the JSPB instance
+ *     for transitional soy proto support: http://goto/soy-param-migration
+ * @return {!Object}
+ */
+proto.api.CreateFUOTADeploymentForGroupResponse.prototype.toObject = function(opt_includeInstance) {
+  return proto.api.CreateFUOTADeploymentForGroupResponse.toObject(opt_includeInstance, this);
+};
+
+
+/**
+ * Static version of the {@see toObject} method.
+ * @param {boolean|undefined} includeInstance Whether to include the JSPB
+ *     instance for transitional soy proto support:
+ *     http://goto/soy-param-migration
+ * @param {!proto.api.CreateFUOTADeploymentForGroupResponse} msg The msg instance to transform.
+ * @return {!Object}
+ */
+proto.api.CreateFUOTADeploymentForGroupResponse.toObject = function(includeInstance, msg) {
+  var f, obj = {
+    id: msg.getId()
+  };
+
+  if (includeInstance) {
+    obj.$jspbMessageInstance = msg;
+  }
+  return obj;
+};
+}
+
+
+/**
+ * Deserializes binary data (in protobuf wire format).
+ * @param {jspb.ByteSource} bytes The bytes to deserialize.
+ * @return {!proto.api.CreateFUOTADeploymentForGroupResponse}
+ */
+proto.api.CreateFUOTADeploymentForGroupResponse.deserializeBinary = function(bytes) {
+  var reader = new jspb.BinaryReader(bytes);
+  var msg = new proto.api.CreateFUOTADeploymentForGroupResponse;
+  return proto.api.CreateFUOTADeploymentForGroupResponse.deserializeBinaryFromReader(msg, reader);
+};
+
+
+/**
+ * Deserializes binary data (in protobuf wire format) from the
+ * given reader into the given message object.
+ * @param {!proto.api.CreateFUOTADeploymentForGroupResponse} msg The message object to deserialize into.
+ * @param {!jspb.BinaryReader} reader The BinaryReader to use.
+ * @return {!proto.api.CreateFUOTADeploymentForGroupResponse}
+ */
+proto.api.CreateFUOTADeploymentForGroupResponse.deserializeBinaryFromReader = function(msg, reader) {
+  while (reader.nextField()) {
+    if (reader.isEndGroup()) {
+      break;
+    }
+    var field = reader.getFieldNumber();
+    switch (field) {
+    case 1:
+      var value = /** @type {string} */ (reader.readString());
+      msg.setId(value);
+      break;
+    default:
+      reader.skipField();
+      break;
+    }
+  }
+  return msg;
+};
+
+
+/**
+ * Class method variant: serializes the given message to binary data
+ * (in protobuf wire format), writing to the given BinaryWriter.
+ * @param {!proto.api.CreateFUOTADeploymentForGroupResponse} message
+ * @param {!jspb.BinaryWriter} writer
+ */
+proto.api.CreateFUOTADeploymentForGroupResponse.serializeBinaryToWriter = function(message, writer) {
+  message.serializeBinaryToWriter(writer);
+};
+
+
+/**
+ * Serializes the message to binary data (in protobuf wire format).
+ * @return {!Uint8Array}
+ */
+proto.api.CreateFUOTADeploymentForGroupResponse.prototype.serializeBinary = function() {
+  var writer = new jspb.BinaryWriter();
+  this.serializeBinaryToWriter(writer);
+  return writer.getResultBuffer();
+};
+
+
+/**
+ * Serializes the message to binary data (in protobuf wire format),
+ * writing to the given BinaryWriter.
+ * @param {!jspb.BinaryWriter} writer
+ */
+proto.api.CreateFUOTADeploymentForGroupResponse.prototype.serializeBinaryToWriter = function (writer) {
+  var f = undefined;
+  f = this.getId();
+  if (f.length > 0) {
+    writer.writeString(
+      1,
+      f
+    );
+  }
+};
+
+
+/**
+ * Creates a deep clone of this proto. No data is shared with the original.
+ * @return {!proto.api.CreateFUOTADeploymentForGroupResponse} The clone.
+ */
+proto.api.CreateFUOTADeploymentForGroupResponse.prototype.cloneMessage = function() {
+  return /** @type {!proto.api.CreateFUOTADeploymentForGroupResponse} */ (jspb.Message.cloneMessage(this));
+};
+
+
+/**
+ * optional string id = 1;
+ * @return {string}
+ */
+proto.api.CreateFUOTADeploymentForGroupResponse.prototype.getId = function() {
+  return /** @type {string} */ (jspb.Message.getFieldProto3(this, 1, ""));
+};
+
+
+/** @param {string} value  */
+proto.api.CreateFUOTADeploymentForGroupResponse.prototype.setId = function(value) {
   jspb.Message.setField(this, 1, value);
 };
 
